--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "chess.js": "^1.4.0",
+    "chessops": "^0.15.0",
+    "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-chessboard": "^4.6.0",
+    "react-dom": "19.2.0",
+    "stockfish.js": "^10.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
