--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prebuild": "node scripts/build-games-db.js",
     "build": "next build",
+    "build:db": "node scripts/build-games-db.js",
     "start": "next start",
     "lint": "eslint"
   },
